Updated top banner of erb file

--- a/views/index.erb
+++ b/views/index.erb
@@ -10,7 +10,16 @@
 </head>
 <body>
     <header>
-        
+        <div class="top-contacts">
+            <a href="#">
+                <img src="" alt="phone icon">
+                (631)123-4567
+            </a>
+            <a href="#">
+                <img src="" alt="mail icon">
+                friendly.admin@bakery.com
+            </a>
+        </div>
     </header>
 
     <main>
