Added images directory and images to erb file

--- a/views/index.erb
+++ b/views/index.erb
@@ -11,12 +11,12 @@
 <body>
     <header>
         <div class="top-contacts">
-            <a href="#">
+            <a href="../images/phone-call.svg">
                 <img src="" alt="phone icon">
                 (631)123-4567
             </a>
             <a href="#">
-                <img src="" alt="mail icon">
+                <img src="../images/envelope.svg" alt="mail icon">
                 friendly.admin@bakery.com
             </a>
         </div>
