Moved images to public folder

--- a/views/index.erb
+++ b/views/index.erb
@@ -11,12 +11,12 @@
 <body>
     <header>
         <div class="top-contacts">
-            <a href="../images/phone-call.svg">
-                <img src="" alt="phone icon">
+            <a href="#">
+                <img src="images/phone-call.svg" alt="phone icon" width="15px">
                 (631)123-4567
             </a>
             <a href="#">
-                <img src="../images/envelope.svg" alt="mail icon">
+                <img src="images/envelope.svg" alt="mail icon" width="15px">
                 friendly.admin@bakery.com
             </a>
         </div>
