Modified index with input field

--- a/views/index.erb
+++ b/views/index.erb
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="top-contacts">
+        <div class="top-banner">
             <a href="#">
                 <img src="images/phone-call.svg" alt="phone icon" width="15px">
                 (631)123-4567
@@ -19,6 +19,10 @@
                 <img src="images/envelope.svg" alt="mail icon" width="15px">
                 friendly.admin@bakery.com
             </a>
+            <form action="/" method="post">
+                <input type="text" name="search" placeholder="Enter item...">
+                <input type="image" src="images/magnifying-glass.svg" alt="magnifying glass icon" width="15px">
+            </form>
         </div>
     </header>
 
