Added top banner and changed images

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,18 @@
 /* Color Scheme */
-
+/* 
+    Sections of Page (and background colors):
+    1. Header
+        a. Top Banner --> Bright Color (solid) == PURPLE [#5E55C7]
+        b. Hero Image --> Dark Color (overlay) == ARSENIC [#403F4C]
+    2. Main
+        a. About Section --> Light Color (solid) == PLATINUM [#EDE3E9]
+        b. Testimonials --> Bright Color (solid) STIL DE GRAIN YELLOW [#F9DC5C]
+        c. Featured Products --> Light Color(solid) == PLATINUM [#EDE3E9]
+        d. Newsletter --> Bright Color (solid) == STIL DE GRAIN YELLOW [#F9DC5C]
+    3. Footer
+        a. Secondary --> Dark Color (overlay) == ARSENIC [#403F4C]
+        b. Primary --> Bright Color (solid) == PURPLE [#5E55C7]
+*/
 
 * {
     margin: 0;
@@ -8,6 +21,33 @@
 }
 
 .top-banner {
-    background-color: aqua;
-    height: 20px;
+    background-color: #5E55C7;
+    padding: 10px;
+    display: flex;
+}
+
+.top-banner .top-contacts {
+    display: inline-block;
+    margin-left: 15px;
+}
+
+.top-banner .top-contacts a {
+    color: #EDE3E9;
+    text-decoration: none;
+    margin-right: 15px;
+    border-right: 1px solid #EDE3E9;
+    padding-right: 5px;
+}
+
+
+.top-banner .top-search {
+    display: inline-block;
+    margin-right: 15px;
+    margin-left: auto;
+}
+
+.top-banner .top-search #input-1 {
+    border: 1px solid #EDE3E9;
+    border-radius: 2px;
+    padding: 2px;
 }
