--- a/public/style.css
+++ b/public/style.css
@@ -51,3 +51,18 @@
     border-radius: 2px;
     padding: 2px;
 }
+
+/* -------------------------------------------- */
+.overlay {
+    width: 100%;
+    height: 93vh; 
+    background-color: #403F4C;
+    opacity: 0.5;
+}
+
+.hero {
+    width: 100%;
+    height: 93vh; 
+    background: url(images/drew-coffman-1872-unsplash.jpg) center center no-repeat fixed;
+    background-size: cover;
+}
