--- a/views/index.erb
+++ b/views/index.erb
@@ -32,6 +32,12 @@
             </div>
 
         </div>
+
+        <div class="hero">
+            <div class="overlay">
+            </div>       
+        </div>
+
     </header>
 
     <main>
