--- a/public/style.css
+++ b/public/style.css
@@ -53,16 +53,45 @@
 }
 
 /* -------------------------------------------- */
-.overlay {
-    width: 100%;
-    height: 93vh; 
-    background-color: #403F4C;
-    opacity: 0.5;
-}
-
 .hero {
     width: 100%;
     height: 93vh; 
     background: url(images/drew-coffman-1872-unsplash.jpg) center center no-repeat fixed;
     background-size: cover;
+    display: inline-block;
+    position: absolute;
+    z-index: -2;
+}
+
+.overlay {
+    width: 100%;
+    height: 93vh; 
+    background-color: #403F4C;
+    opacity: 0.30;
+    position: absolute;
+    z-index: -1;
+}
+
+.hero img {
+    object-fit: cover;
+    height: 90px;
+    width: 320px;
+    margin-left: 150px;
+    margin-top: 50px;
+    position: absolute;
+}
+
+.hero .menu-bar {
+    float: right;
+    margin: 80px 150px 0 0;
+}
+
+.hero .menu-bar a {
+    margin: 10px;
+    text-decoration: none;
+    color: #EDE3E9;
+    font-weight: bold;
+    background-color: #5E55C7;
+    padding: 10px;
+    border-radius: 2px;
 }
