--- a/views/index.erb
+++ b/views/index.erb
@@ -34,8 +34,13 @@
         </div>
 
         <div class="hero">
-            <div class="overlay">
-            </div>       
+            <img src="images/logo_transparent.png" alt="bakery-logo">
+            <div class="menu-bar">
+                <a href="#">Shop</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </div>
+            <div class="overlay"></div>       
         </div>
 
     </header>
