--- a/views/index.erb
+++ b/views/index.erb
@@ -40,12 +40,19 @@
                 <a href="#">About</a>
                 <a href="#">Contact</a>
             </div>
-            <div class="overlay"></div>       
+            <div class="overlay"></div>   
+            <h1>Be our guest ... 😉</h1>   
+            <img class="down-arrow" src="images/arrow-down-sign-to-navigate.svg" alt="down arrow icon"> 
         </div>
-
     </header>
 
     <main>
+
+        <div class="about-title">
+            <div class="about=box"></div>
+            <p>What We're All About</p>
+            <div class="about=box"></div>
+        </div>
     
     </main>
 
