--- a/public/style.css
+++ b/public/style.css
@@ -55,22 +55,22 @@
 /* -------------------------------------------- */
 .hero {
     width: 100%;
-    height: 93vh; 
+    height: 94vh; 
     background: url(images/drew-coffman-1872-unsplash.jpg) center center no-repeat fixed;
     background-size: cover;
     display: inline-block;
-    position: absolute;
-    z-index: -2;
+    /* position: absolute;
+    z-index: -2; */
 }
 
-.overlay {
+/* .overlay {
     width: 100%;
     height: 93vh; 
     background-color: #403F4C;
     opacity: 0.30;
     position: absolute;
     z-index: -1;
-}
+} */
 
 .hero img {
     object-fit: cover;
@@ -118,4 +118,39 @@
     cursor: pointer;
     border: none;
     background-color: #EDE3E9;
+}
+
+/* -------------------------------------------- */
+
+.main-sect {
+    /* margin-top: 625px; */
+    /* position: absolute; */
+    background-color: #EDE3E9;
+    height: 100vh;
+    display: flex;
+}
+
+.about-title-container {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    display: flex;
+}
+
+.about-box {
+    /* border: 1px solid black; */
+    height: 25px;
+    width: 80px;
+    display: inline-block;
+    margin: 10px 0;
+    border-bottom: 2.5px solid #5E55C7;
+}
+.about-title {
+    /* border: 1px solid black; */
+    /* height: 50px; */
+    width: 60%;
+    display: inline-block;
+    margin: 10px 0;
+    padding-top: 10px;
+    color: #5E55C7;
 }
