--- a/views/index.erb
+++ b/views/index.erb
@@ -40,20 +40,18 @@
                 <a href="#">About</a>
                 <a href="#">Contact</a>
             </div>
-            <div class="overlay"></div>   
+            <%# <div class="overlay"></div>    %>
             <h1>Be our guest ... 😉</h1>   
             <img class="down-arrow" src="images/arrow-down-sign-to-navigate.svg" alt="down arrow icon"> 
         </div>
     </header>
 
-    <main>
-
-        <div class="about-title">
-            <div class="about=box"></div>
-            <p>What We're All About</p>
-            <div class="about=box"></div>
+    <main class="main-sect">
+        <div class="about-title-container">
+            <div class="about-box"></div>
+            <h2 class="about-title">What We're All About</h2>
+            <div class="about-box"></div> 
         </div>
-    
     </main>
 
     <footer>
