--- a/views/index.erb
+++ b/views/index.erb
@@ -52,6 +52,15 @@
             <h2 class="about-title">What We're All About</h2>
             <div class="about-box"></div> 
         </div>
+
+        <div class="about-content">
+            <div class="about-text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur ipsam, nisi impedit ipsum repudiandae minima asperiores placeat provident in molestias repellat ut vero quibusdam veniam! Eius error earum asperiores dolorem!Atque itaque sunt, fugit modi, assumenda amet similique delectus, quam possimus natus blanditiis ad quibusdam accusantium porro consequuntur. In, nostrum esse. Vitae voluptatibus unde quia cum suscipit recusandae atque eius.</p>
+            </div>
+            <div class="about-image">
+            </div>
+        </div>
+
     </main>
 
     <footer>
