--- a/views/index.erb
+++ b/views/index.erb
@@ -42,7 +42,7 @@
             </div>
             <%# <div class="overlay"></div>    %>
             <h1>Be our guest ... 😉</h1>   
-            <img class="down-arrow" src="images/arrow-down-sign-to-navigate.svg" alt="down arrow icon"> 
+            <img class="down-arrow-header" src="images/arrow-down-sign-to-navigate.svg" alt="down arrow icon"> 
         </div>
     </header>
 
@@ -61,6 +61,7 @@
             </div>
         </div>
 
+        <img class="down-arrow-main" src="images/arrow-down-sign-to-navigate.svg" alt="down arrow icon">
     </main>
 
     <footer>
