Added testimonial section and cleaned up code

--- a/views/index.erb
+++ b/views/index.erb
@@ -40,32 +40,43 @@
                 <a href="#">About</a>
                 <a href="#">Contact</a>
             </div>
-            <%# <div class="overlay"></div>    %>
             <h1>Be our guest ... 😉</h1>   
             <img class="down-arrow-header" src="images/arrow-down-sign-to-navigate.svg" alt="down arrow icon"> 
         </div>
     </header>
 
-    <main class="main-sect">
-        <div class="about-title-container">
-            <div class="about-box"></div>
-            <h2 class="about-title">What We're All About</h2>
-            <div class="about-box"></div> 
+    <main>
+        <div class="about-sect">
+            <div class="about-title-container">
+                <div class="about-box"></div>
+                <h2 class="about-title">What We're All About</h2>
+                <div class="about-box"></div> 
+            </div>
+
+            <div class="about-content">
+                <div class="about-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur ipsam, nisi impedit ipsum repudiandae minima asperiores placeat provident in molestias repellat ut vero quibusdam veniam! Eius error earum asperiores dolorem!Atque itaque sunt, fugit modi, assumenda amet similique delectus, quam possimus natus blanditiis ad quibusdam accusantium porro consequuntur. In, nostrum esse. Vitae voluptatibus unde quia cum suscipit recusandae atque eius.</p>
+                </div>
+                <div class="about-image">
+                </div>
+            </div>
+
+            <img class="down-arrow-main" src="images/arrow-down-sign-to-navigate.svg" alt="down arrow icon">
         </div>
 
-        <div class="about-content">
-            <div class="about-text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur ipsam, nisi impedit ipsum repudiandae minima asperiores placeat provident in molestias repellat ut vero quibusdam veniam! Eius error earum asperiores dolorem!Atque itaque sunt, fugit modi, assumenda amet similique delectus, quam possimus natus blanditiis ad quibusdam accusantium porro consequuntur. In, nostrum esse. Vitae voluptatibus unde quia cum suscipit recusandae atque eius.</p>
-            </div>
-            <div class="about-image">
+        <div class="test-sect">
+        <div class="test-overlay">
+                <div class="test-title-container">
+                    <div class="test-box"></div>
+                    <h2 class="test-title">See Why People Loaf Us</h2>
+                    <div class="test-box"></div> 
+                </div>
             </div>
         </div>
-
-        <img class="down-arrow-main" src="images/arrow-down-sign-to-navigate.svg" alt="down arrow icon">
     </main>
 
     <footer>
-    
+
     </footer>
 </body>
     <%# Bootstrap Script 1 %>
