--- a/public/style.css
+++ b/public/style.css
@@ -53,24 +53,14 @@
 }
 
 /* -------------------------------------------- */
+
 .hero {
     width: 100%;
     height: 94vh; 
     background: url(images/drew-coffman-1872-unsplash.jpg) center center no-repeat;
     background-size: cover;
     display: inline-block;
-    /* position: absolute;
-    z-index: -2; */
 }
-
-/* .overlay {
-    width: 100%;
-    height: 93vh; 
-    background-color: #403F4C;
-    opacity: 0.30;
-    position: absolute;
-    z-index: -1;
-} */
 
 .hero img {
     object-fit: cover;
@@ -122,25 +112,20 @@
 
 /* -------------------------------------------- */
 
-.main-sect {
-    /* margin-top: 625px; */
-    /* position: absolute; */
+.about-sect {
     background-color: #EDE3E9;
     height: 100vh;
-    /* display: flex; */
 }
 
 .about-title-container {
     margin-left: auto;
     margin-right: auto;
-    /* margin-top: 20px; */
     padding-top: 20px;
     width: 30%;
     display: flex;
 }
 
 .about-box {
-    /* border: 1px solid black; */
     height: 25px;
     width: 80px;
     display: inline-block;
@@ -148,8 +133,6 @@
     border-bottom: 2.5px solid #5E55C7;
 }
 .about-title {
-    /* border: 1px solid black; */
-    /* height: 50px; */
     font-size: 2em;
     width: 180%;
     display: inline-block;
@@ -159,7 +142,6 @@
 }
 
 .about-content {
-    /* border: 1px solid black; */
     height: 65%;
     width: 75%;
     margin-left: auto;
@@ -169,7 +151,6 @@
 }
 
 .about-text, .about-image {
-    /* border: 1px solid black; */
     width: 50%;
     height: 100%;
 }
@@ -203,9 +184,43 @@
 
 .down-arrow-main:hover {
     cursor: pointer;
-    /* border: none; */
-    /* background-color: #EDE3E9; */
 }
 
 /* -------------------------------------------- */
 
+.test-sect {
+    background: url(images/abundance-baked-bakery-205961.jpg) center center no-repeat;
+    background-size: cover;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.test-overlay {
+    background-color: rgba(249, 220, 92, 0.35);
+    height: 100vh;
+}
+
+.test-title-container {
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 20px;
+    width: 30%;
+    display: flex;
+}
+
+.test-box {
+    height: 25px;
+    width: 80px;
+    display: inline-block;
+    margin: 10px 0;
+    border-bottom: 2.5px solid #EDE3E9;
+}
+
+.test-title {
+    font-size: 2em;
+    width: 300%;
+    display: inline-block;
+    margin: 10px 0;
+    padding-top: 10px;
+    color: #EDE3E9;
+}
