--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Friendly Bakery</title>
-    <%# Bootstrap Link %>
+    <%# <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"> %>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -65,11 +65,24 @@
         </div>
 
         <div class="test-sect">
-        <div class="test-overlay">
+            <div class="test-overlay">
                 <div class="test-title-container">
                     <div class="test-box"></div>
-                    <h2 class="test-title">See Why People Loaf Us</h2>
+                    <h2 class="test-title">See Why People ❤️  Us</h2>
                     <div class="test-box"></div> 
+                </div>
+
+                <div class="test-image-container">
+                    <div class="test-image">
+                        <%# <img src="images/black-leather-jacket-blur-bracelet-775358.jpg" alt="guy smiling"> %>
+                        <img src="images/adult-beard-blur-1212984.jpg" alt="guy smiling">
+                    </div>
+
+                    <div class="test-image-text">
+                        <blockquote>
+                            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium minus debitis pariatur dolores aliquid repudiandae animi natus reprehenderit distinctio, ab obcaecati at reiciendis, et incidunt ad saepe facere recusandae accusantium?"
+                        </blockquote>
+                    </div>
                 </div>
             </div>
         </div>
@@ -79,8 +92,8 @@
 
     </footer>
 </body>
-    <%# Bootstrap Script 1 %>
-    <%# Bootstrap Script 1 %>
-    <%# Bootstrap Script 1 %>
+    <%# <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script> %>
     <%# Personal JS Script %>
 </html>
