--- a/views/index.erb
+++ b/views/index.erb
@@ -86,6 +86,40 @@
                 </div>
             </div>
         </div>
+
+        <div class="prod-sect">
+            <div class="prod-title-container">
+                <div class="prod-box"></div>
+                <h2 class="prod-title">Check Out Our Products!</h2>
+                <div class="prod-box"></div> 
+            </div>
+
+            <nav class="prod-menu">
+                <a href="#">Cupackes</a>
+                <a href="#">Bread</a>
+                <a href="#">Macaroons</a>
+                <a href="#">Cake</a>
+            </nav>
+
+            <div class="products-container">
+                <div class="product">
+                    <div class="prod-descript">
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="prod-descript">
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="prod-descript">
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="prod-descript">
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
