Added products section and new images

--- a/views/index.erb
+++ b/views/index.erb
@@ -103,19 +103,35 @@
 
             <div class="products-container">
                 <div class="product">
+                    <div class="prod-image">
+                        <img src="images/baked-butter-cake-1055271.jpg" alt="cupake image 1">
+                    </div>
                     <div class="prod-descript">
+                        <h3>Baked Butter Cupcake</h3>
                     </div>
                 </div>
                 <div class="product">
+                    <div class="prod-image">
+                        <img src="images/baked-berry-cake-1055272.jpg" alt="cupake image 1">
+                    </div>
                     <div class="prod-descript">
+                        <h3>Baked Strawberry Cupcake</h3>
                     </div>
                 </div>
                 <div class="product">
+                    <div class="prod-image">
+                        <img src="images/baked-berry-cake-1055270.jpg" alt="cupake image 1">
+                    </div>
                     <div class="prod-descript">
+                        <h3>Baked Strawberry Cupcake (w/ Grapes)</h3>
                     </div>
                 </div>
                 <div class="product">
+                    <div class="prod-image">
+                        <img src="images/baked-butter-cake-1055271.jpg" alt="cupake image 1">
+                    </div>
                     <div class="prod-descript">
+                        <h3>Baked Butter Cupcake</h3>
                     </div>
                 </div>
             </div>
