--- a/public/style.css
+++ b/public/style.css
@@ -326,5 +326,46 @@
 
 .products-container {
     width: 85%;
-    height: 70%;
+    height: 60%;
+    /* border: 1px solid black; */
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    display: flex;
+}
+
+.product {
+    /* border: 1px solid black; */
+    width: 22%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.prod-image {
+    /* border: 1px solid black; */
+    width: 100%;
+    height: 69%;
+}
+
+.prod-image img {
+    width: 100%;
+    height: 100%;
+}
+
+.prod-descript {
+    /* border: 1px solid black; */
+    width: 100%;
+    height: 30%;
+    margin-bottom: 0;
+    margin-top: auto;
+    background-color: white;
+    color: #5E55C7;
+    text-align: center;
+    border-top: 2.25px dashed #5E55C7;
+    /* padding: 10px; */
+}
+
+.prod-descript h3 {
+    margin: 15px 10px;
 }
