--- a/views/index.erb
+++ b/views/index.erb
@@ -104,6 +104,7 @@
             <div class="products-container">
                 <div class="product">
                     <div class="prod-image">
+                        <p class="prod-price">$25</p>
                         <img src="images/baked-butter-cake-1055271.jpg" alt="cupake image 1">
                     </div>
                     <div class="prod-descript">
@@ -112,7 +113,8 @@
                 </div>
                 <div class="product">
                     <div class="prod-image">
-                        <img src="images/baked-berry-cake-1055272.jpg" alt="cupake image 1">
+                        <p class="prod-price">$25</p>
+                        <img src="images/baked-berry-cake-1055272.jpg" alt="cupake image 2">
                     </div>
                     <div class="prod-descript">
                         <h3>Baked Strawberry Cupcake</h3>
@@ -120,7 +122,8 @@
                 </div>
                 <div class="product">
                     <div class="prod-image">
-                        <img src="images/baked-berry-cake-1055270.jpg" alt="cupake image 1">
+                        <p class="prod-price">$25</p>
+                        <img src="images/baked-berry-cake-1055270.jpg" alt="cupake image 3">
                     </div>
                     <div class="prod-descript">
                         <h3>Baked Strawberry Cupcake (w/ Grapes)</h3>
@@ -128,6 +131,7 @@
                 </div>
                 <div class="product">
                     <div class="prod-image">
+                        <p class="prod-price">$25</p>
                         <img src="images/baked-butter-cake-1055271.jpg" alt="cupake image 1">
                     </div>
                     <div class="prod-descript">
