--- a/public/style.css
+++ b/public/style.css
@@ -261,7 +261,6 @@
     background-color: #EDE3E9;
     height: 100vh;
     overflow: hidden;
-    /* display: flex; */
 }
 
 .prod-title-container {
@@ -291,9 +290,7 @@
 
 .prod-menu {
     margin-top: 20px;
-    /* border: 1.25px solid #403F4C; */
     border-radius: 5px;
-    /* background-color: #5E55C7; */
     display: inline-block;
     margin-left: 445px;
     padding: 15px 0;
@@ -327,7 +324,6 @@
 .products-container {
     width: 85%;
     height: 60%;
-    /* border: 1px solid black; */
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
@@ -335,15 +331,15 @@
 }
 
 .product {
-    /* border: 1px solid black; */
     width: 22%;
     height: 100%;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 15px;
+    box-shadow: 2px 4px #888888;
 }
 
 .prod-image {
-    /* border: 1px solid black; */
     width: 100%;
     height: 69%;
 }
@@ -366,6 +362,8 @@
 .prod-image img {
     width: 100%;
     height: 100%;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
 
 .prod-descript {
@@ -377,6 +375,8 @@
     color: #5E55C7;
     text-align: center;
     border-top: 2.25px dashed #5E55C7;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 .prod-descript h3 {
