--- a/public/style.css
+++ b/public/style.css
@@ -317,7 +317,7 @@
 }
 
 .prod-menu a:hover {
-    background-color: #EDE3E9;
+    background-color: white;
     color: #5E55C7;
 }
 
@@ -381,4 +381,45 @@
 
 .prod-descript h3 {
     margin: 18px 10px 0 10px;
+}
+
+/* -------------------------------------------- */
+
+.news-sect {
+    /* height: 15vh; */
+    background-color: #5E55C7;
+    display: flex;
+    padding: 20px;
+}
+
+.news-sect h2 {
+    color: #EDE3E9;
+    margin-left: 112px;
+    margin-top: 5px;
+}
+
+.news-sect form {
+    margin-right: 112px;
+    margin-left: auto;
+}
+
+.news-sect form input {
+    padding: 9px 25px;
+    border: 1.25px solid #EDE3E9;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    font-size: 1.05em;
+    font-weight: bold;
+}
+
+.news-sect form button {
+    margin-left: -5px;
+    padding: 10px 15px;
+    border: none;
+    background-color: #403F4C;
+    color: #EDE3E9;
+    font-weight: bold;
+    font-size: 1.05em;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
