--- a/views/index.erb
+++ b/views/index.erb
@@ -140,6 +140,14 @@
                 </div>
             </div>
         </div>
+
+        <div class="news-sect">
+            <h2>Get New Receipes Weekly!</h2>
+            <form action="" method="">
+                <input type="text" name="newsletter" placeholder="Enter Email...">
+                <button>Enter</button>
+            </form>
+        </div>
     </main>
 
     <footer>
