--- a/views/index.erb
+++ b/views/index.erb
@@ -151,7 +151,57 @@
     </main>
 
     <footer>
+        <div class="secondary">
+            <div class="footer-container">
+                <div class="quick footer-contents">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Testimonials</a></li>
+                        <li><a href="#">Shop</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
 
+                <div class="hours footer-contents">
+                    <h3>Hours of Operation</h3>
+                    <ul>
+                        <li>Open Daily!!</li>
+                        <li><strong>Sunday: </strong>12:00PM - 06:00PM</li>
+                        <li><strong>Monday: </strong>09:00AM - 09:00PM</li>
+                        <li><strong>Tuesday: </strong>09:00AM - 09:00PM</li>
+                        <li><strong>Wednesday: </strong>09:00AM - 09:00PM</li>
+                        <li><strong>Thursday: </strong>09:00AM - 09:00PM</li>
+                        <li><strong>Friday: </strong>09:00AM - 09:00PM</li>
+                        <li><strong>Saturday: </strong>09:00AM - 06:00PM</li>
+                    </ul>
+                </div>
+
+                <div class="bottom-contacts footer-contents">
+                    <h3>Contacts</h3>
+                    <ul>
+                        <li>
+                            <strong>Address:</strong>
+                            <li>&emsp;123 Make Believe Street</li>
+                            <li>&emsp;Islip Terrace, NY 11752</li>
+                        </li>
+                        <li>
+                            <strong>Phone: </strong>
+                            <li>&emsp;(631)123-4567</li>
+                        </li>
+                        <li>
+                            <strong>Email: </strong>
+                            <li>&emsp;friendly.admin@bakery.com<li>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="primary">
+            <p>Copyright &copy; 2019 Friendly Bakery, Co.</p>
+        </div>
     </footer>
 </body>
     <%# <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
