--- a/views/index.erb
+++ b/views/index.erb
@@ -116,7 +116,7 @@
                         <img src="images/baked-berry-cake-1055272.jpg" alt="cupake image 2">
                     </div>
                     <div class="prod-descript">
-                        <h3>Baked Strawberry Cupcake</h3>
+                        <h3>Baked Raspberry Cupcake</h3>
                     </div>
                 </div>
                 <div class="product">
@@ -125,7 +125,7 @@
                         <img src="images/baked-berry-cake-1055270.jpg" alt="cupake image 3">
                     </div>
                     <div class="prod-descript">
-                        <h3>Baked Strawberry Cupcake (w/ Grapes)</h3>
+                        <h3>Baked Strawberry and Grape Cupcake</h3>
                     </div>
                 </div>
                 <div class="product">
