--- a/views/index.erb
+++ b/views/index.erb
@@ -72,8 +72,66 @@
                     <div class="test-box"></div> 
                 </div>
 
-                <div class="test-image-container">
-                    <div class="test-image">
+                <%# <div class="test-image-container"> %>
+                <div>
+                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <%#<img src="..." class="d-block w-100" alt="...">%>
+                                <div class="test-image-container">
+                                    <div class="test-image">
+                                        <img src="images/adult-beard-blur-1212984.jpg" alt="guy smiling">
+                                    </div>
+
+                                    <div class="test-image-text">
+                                        <blockquote>
+                                            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium minus debitis pariatur dolores aliquid repudiandae animi natus reprehenderit distinctio, ab obcaecati at reiciendis, et incidunt ad saepe facere recusandae accusantium?"
+                                        </blockquote>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="carousel-item">
+                                <%#<img src="..." class="d-block w-100" alt="...">%>
+                                <div class="test-image-container">
+                                    <div class="test-image">
+                                        <img src="images/beautiful-beauty-blurred-background-1239291.jpg" alt="guy smiling">
+                                    </div>
+
+                                    <div class="test-image-text">
+                                        <blockquote>
+                                            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium minus debitis pariatur dolores aliquid repudiandae animi natus reprehenderit distinctio, ab obcaecati at reiciendis, et incidunt ad saepe facere recusandae accusantium?"
+                                        </blockquote>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="carousel-item">
+                                <%#<img src="..." class="d-block w-100" alt="...">%>
+                                <div class="test-image-container">
+                                    <div class="test-image">
+                                        <img src="images/beautiful-beauty-blur-814052.jpg" alt="guy smiling">
+                                    </div>
+
+                                    <div class="test-image-text">
+                                        <blockquote>
+                                            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium minus debitis pariatur dolores aliquid repudiandae animi natus reprehenderit distinctio, ab obcaecati at reiciendis, et incidunt ad saepe facere recusandae accusantium?"
+                                        </blockquote>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+
+                    <%#<div class="test-image">
                         <img src="images/adult-beard-blur-1212984.jpg" alt="guy smiling">
                     </div>
 
@@ -81,7 +139,7 @@
                         <blockquote>
                             "Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium minus debitis pariatur dolores aliquid repudiandae animi natus reprehenderit distinctio, ab obcaecati at reiciendis, et incidunt ad saepe facere recusandae accusantium?"
                         </blockquote>
-                    </div>
+                    </div> %>
                 </div>
             </div>
         </div>
